--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^4.2.1",
     "connect-redis": "^6.1.3",
+    "cuid": "^2.1.8",
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
     "passport": "^0.6.0",
@@ -84,5 +85,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "prisma": {
+    "seed": "ts-node --transpile-only prisma/seed.ts"
   }
 }
